K8s-inzynierka/infra/ingress/cdn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdn-server-ingress
  namespace: inzynierka
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: cdn.aplikacja-inzynierka.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cdn-app-svc
            port:
              number: 80
